# NGDC_method

./: .gitignore  README.md  example_usage.py  main.py  performance_comparison.py  pyproject.toml  requirements.txt  test_competitors.py  test_ngdc_results.py
gdcm/algorithms/: __init__.py  agdc.py  base.py  distance_functions.py  factory.py  gradient_descent_clustering_methods_features.py  ngdc.py  vgdc.py
gdcm/common/: utils.py
gdcm/data/: generate_synthetic_data.py  load_data.py
tests/: test_gdc.py
