[tool.poetry]
name = "GDC"
version = "0.1.0"
description = "Gradient Descent version of Clustering algorithms"
authors = ["Soroosh Shalileh <sr.shalileh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jax = "0.3.7"
shap = "0.40.0"
scipy = "1.7.1"
pandas = "1.3.4"
wandb = "0.12.10"
seaborn = "0.11.2"
scikit-learn = "0.24.2"
scikit-optimize = "0.9.0"
matplotlib-inline = "0.1.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
